--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* The main css file*/
 body{
     margin: 0;
     padding: 0;
@@ -49,7 +50,7 @@ body{
     display: block;
     margin: 0 auto;
     list-style: none;
-    text-align: center; 
+    text-align: center;
     }
     #nav li{
     display: inline-block;
