--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,12 @@ h3 {
 
 #header {
   width: 100%;
-  background-color: #333333;/*background colour grey*/
-  opacity: .4;/*this makes it somewhat transparent, if you don't want the text/buttons transparent but only the background change this seperately for those elements*/
+  background-color: rgba(51, 51, 51, .4);/*background colour grey. The .4 makes it transparent*/
+  /*opacity: .4;*//*No longer needed since we use transparent rgba instead of hex. This makes the header partially transparent but the issue is that it also makes the links in it transparent*/
+  back
   height: 80px;
   position: fixed;
-  margin-top: 30px;
+  /*margin-top: 30px;*/
   z-index: 5;/*this makes it so the header appears in front of everything it passes. Otherwise it appears under any text it scrolls past and can't be clicked*/
 }
 #nav { /*width: 410px;*/  margin-top: 20px; text-align: center;}
@@ -61,7 +62,9 @@ h3 {
 #nav li{
   display: inline-block;
   margin-top: 9px;
+  margin-bottom: 30px;
   padding-left: 21px;
+  opacity: 1;
 }
 #nav li a { color: #fff; opacity:0.6; font-size: 16px; text-decoration: none; font-family: 'Wellfleet'; }
 #nav li a.active { color: #fff; opacity:1; border-bottom: 2px solid #fff; }
@@ -207,4 +210,48 @@ float: left;
     line-height:35px;
     color:#444;
     color:rgba(0, 0, 0, 0.4);
+}
+
+/*Here comes the back to top stuff*/
+
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top i {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    z-index: 5;
+}
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+    color: #fff;
+    top: 5px;
 }
