--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ h3 {
   opacity: 1;
 }
 #nav li a { color: #fff; opacity:0.6; font-size: 16px; text-decoration: none; font-family: 'Wellfleet'; }
-#nav li a.active { color: #fff; opacity:1; border-bottom: 2px solid #fff; }
+#nav li a.active { color: blue; opacity:1; border-bottom: 2px solid #fff; }
 #nav li a:hover { color: #fff; opacity:1; }
 
 .slide-text {
